# GyyBot

./: CMakeLists.txt  README.md  curl_command.sh  main.cpp  settings.txt  test.txt
include/: Bot.h  FileHandle.h  Json.h  Obs.h  Server.h  Sock.h
sha256/: hash256.sh
src/: Bot.cpp  FileHandle.cpp  Json.cpp  Obs.cpp  Server.cpp  Sock.cpp  main.cpp
